fix terminal background on mobile bug

--- a/css/main.css
+++ b/css/main.css
@@ -54,6 +54,7 @@ h1 {
         width: 100%;
         margin: 0;
         padding: 0;
+        color: transparent;
     }
 
     .titlebar {
